--- a/FinalProjectGroup052-Fa21.ipynb
+++ b/FinalProjectGroup052-Fa21.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - Correlations with California's Crime"
+    "# Correlations with California's Crime"
    ]
   },
   {
